--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="dimitri posadskiy full stack developer java javascript react react native"
+      content="dimitri posadskiy principal backend developer java javascript react react native"
     />
     <link rel="apple-touch-icon" href="/black-circle/logo-black-circle-128.png" />
     <link rel="manifest" href="/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&family=JetBrains+Mono:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <title>Posadskiy - Principal Java Developer | Full-Stack Development</title>
+    <title>Posadskiy - Principal Java Developer | Principal Backend Developer</title>
 </head>
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
