--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000"/>
     <meta
             name="description"
-            content="dimitri posadskiy full stack developer java javascript react react native"
+            content="dimitri posadskiy principal backend developer java javascript react react native"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/black-circle/logo-black-circle-128.png"/>
     <!--
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Posadskiy - Full-Stack Developer Java Javascript React Machine Learning</title>
+    <title>Posadskiy - Principal Backend Developer | Cloud, AI & Data Platforms</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
