--- a/index.html
+++ b/index.html
@@ -7,14 +7,34 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="dimitri posadskiy principal backend developer java javascript react react native"
+      content="Dimitri Posadskiy builds resilient backend systems, cloud platforms, and AI-ready data tools with Java, distributed architectures, and a focus on measurable impact."
     />
     <link rel="apple-touch-icon" href="/black-circle/logo-black-circle-128.png" />
     <link rel="manifest" href="/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&family=JetBrains+Mono:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <title>Posadskiy - Principal Java Developer | Principal Backend Developer</title>
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Dimitri Posadskiy | Principal Backend Developer & Cloud Architect" />
+    <meta
+      property="og:description"
+      content="Principal backend developer delivering Java-based cloud and AI platforms with a focus on distributed systems, data platforms, and measurable outcomes."
+    />
+    <meta property="og:image" content="/main_photo.png" />
+    <meta property="og:site_name" content="Dimitri Posadskiy" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Dimitri Posadskiy | Principal Backend Developer & Cloud Architect" />
+    <meta
+      name="twitter:description"
+      content="Principal backend developer delivering Java-based cloud and AI platforms with a focus on distributed systems, data platforms, and measurable outcomes."
+    />
+    <meta name="twitter:image" content="/main_photo.png" />
+    <title>Dimitri Posadskiy | Principal Backend Developer & Cloud Architect</title>
+    <script
+      defer
+      src="https://cloud.umami.is/script.js"
+      data-website-id="bc6bebef-101a-4c76-b436-929ed8595f52"
+    ></script>
 </head>
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
